guestbook-frontend-https-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: guestbook
  labels:
    app: guestbook
    tier: frontend
spec:
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress-tls
  namespace: guestbook
spec:
  tls:
  - hosts:
    - guestbook.app.rtbsystems.com
    secretName: guestbook-secret
  rules:
  - host: guestbook.app.rtbsystems.com
    http:
      paths:
      - path:
        backend:
          serviceName: frontend
          servicePort: 80
