ingress-http-rewrite.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-routed-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: http-ingress.tpmlab.vmware.com
    http:
      paths:
      - path: /nginx
        backend:
          serviceName: nginx-svc
          servicePort: 8080
      - path: /guestbook
        backend:
          serviceName: guestbook-frontend
          servicePort: 8081
